fixed megamenu z-index issue

--- a/wp-content/themes/govintranetpress/scss/modules/_header.scss
+++ b/wp-content/themes/govintranetpress/scss/modules/_header.scss
@@ -1,5 +1,6 @@
 .header {
   position: relative;
+  z-index: 1;
   background: $black;
 
   .header-top {
